--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
   <nav style="text-align: center">
     My Coin Wallet
     <div>
@@ -7,9 +7,8 @@
       <a [routerLink]="['my-wallet/', userId]">My Wallet</a>
     </div>
   </nav>
-</header>
+</header> -->
+<app-menu-bar></app-menu-bar>
 <router-outlet></router-outlet>
 <!-- Footer -->
-<footer style="text-align: center">
-  My Coin Wallet | {{year}}
-</footer>
+<app-footer></app-footer>
