removing unused code, adding TODOs

--- a/src/+routes/home/home.component.html
+++ b/src/+routes/home/home.component.html
@@ -3,20 +3,18 @@
     <div class="mainPageContent textCenter" style="padding:50px 0;">
       <h1 id="homePageh1">Hi, I'm Hayden.</h1>
       <p>
+        <!-- TODO (haydenb) get profile image from LinkedIn -->
         <img id="profileImage" class="respImage" src="/assets/profile-pic.jpg" />
       </p>
       
       <div style="text-align:left;">
       <p>I'm a Champaign, IL based developer focused on web apps. You can see my recent work or follow me on <a href="{{gitHubUrl}}">GitHub</a>.</p>
       
-      <p>I focus on:</p>
-      <ul>
-        <li>Front-End Web Development (JavaScript)</li>
-        <li>Back-End Web Development (Java, NodeJs, Wolfram Language)</li>
-        <li>Mobile App Development (Ionic Framework)</li>
-        <li>Angular & React Apps</li>
-      </ul>
       
+      <h2>Side Projects</h2>
+      <p>Here are some side projects</p>
+      <!-- TODO (haydenb) add links to projects deployed on github pages -->
+
       <h2>Contact</h2>
       <p>Feel free to drop me a line if you would like to collaborate on a project.</p>          
       <p>In my spare time, I enjoy running, rock climbing, and walking a Dachund/Jack-russel mix.</p>
