--- a/src/components/menu-bar/menu-bar.component.html
+++ b/src/components/menu-bar/menu-bar.component.html
@@ -1,20 +1,4 @@
-<div class="navbar navbar-fluid_fixed navbarTheme" style="height:50px; margin-bottom:0px; text-align:center;">
-
-</div>
-
-<!-- TODO (haydenb) this shows when viewport is large -->
-<div id="mainNav" class="navbar navbarTheme hideWhenSmall" >
-
-    <ul style="margin-left:50px;">
-      <li>
-        <strong><a href="/">Hayden Brown</a></strong>
-      </li>
-    </ul>
-    <ul style="margin-right:50px;">
-          <!-- TODO (haydenb) add menu links -->
-          Menu
-    </ul>
-    
+<div id="mainNav" class="navbar navbarTheme" > 
     <div class="row">
         <div class="col-3">
           <nav>
@@ -29,29 +13,9 @@
         <div class="col-9">
           <nav class="standardMainCol">
             <ul></ul>
-          <ul class="noHoverColor">
-            <!-- TODO (haydenb) menu links -->
-            Menu
-          </ul>
         </nav>
         </div>
-
     </div>  
 </div>
 
-<!-- TODO (haydenb) this shows when view is small -->
-<div class="navbar navbarTheme navbar-fluid_fixed showWhenSmall" data-ks-navbar>
-  <nav>
-    <ul style="height:45px;padding:9px 12px;">
-      <strong><a class="colorWhite" href="/">Hayden Brown</a></strong>
-      <li style="float:right; padding:0px;color:#fff!important;">
-        Menu
-        <ul style="left:auto;margin-top:12px;">
-          <!-- TODO (haydenb) add menu links -->
-          Menu
-        </ul>
-      </li>
-    </ul>
-  </nav>
-</div>
 <div class="menuBottom"></div>
