--- a/src/+routes/home/home.component.html
+++ b/src/+routes/home/home.component.html
@@ -3,24 +3,24 @@
     <div class="mainPageContent textCenter" style="padding:50px 0;">
       <h1 id="homePageh1">Hi, I'm Hayden.</h1>
       <p>
-        <!-- TODO (haydenb) get profile image from LinkedIn -->
         <img id="profileImage" class="respImage" src="/assets/profile-pic.jpg" />
       </p>
       
       <div style="text-align:left;">
-      <p>I'm a Champaign, IL based developer focused on web apps. You can see my recent work or follow me on <a href="{{gitHubUrl}}">GitHub</a>.</p>
-      
+      <p>I'm a Champaign, IL based developer focused on web apps. You can see my recent work or follow me on <a href="{{gitHubUrl}}">GitHub</a> or <a href="{{linkedInUrl}}">LinkedIn</a>.</p>
+      <p>In my spare time, I enjoy running, rock climbing, and walking a Dachund/Jack-Russel mix.</p>
       
       <h2>Side Projects</h2>
-      <p>Here are some side projects</p>
-      <!-- TODO (haydenb) add links to projects deployed on github pages -->
-
+      <ng-container *ngFor="let project of projects">
+        <p><strong>{{project.title}}</strong>: {{project.description}} <br>View <a target="_blank" [href]="project.sourceUrl">live demo</a> or <a target="_blank" [href]="project.demoUrl">source code</a>.</p>
+        <a target="_blank" [href]="project.demoUrl"><img class="project-image respImage" [src]="project.image"></a>
+      </ng-container>
+      
       <h2>Contact</h2>
       <p>Feel free to drop me a line if you would like to collaborate on a project.</p>          
-      <p>In my spare time, I enjoy running, rock climbing, and walking a Dachund/Jack-russel mix.</p>
-      <p>Feel free to reach out if you'd like to collaborate on a project, app, or website.</p>
+      
       </div>
-      <a href=""><button class="button button-blue callToActionButton" >Send Message</button></a>
+      <a target="_blank" href="mailto:brown.hayden14@gmail.com"><button class="button button-blue callToActionButton">Send Message</button></a>
     </div>
   </div>
 </div>
