--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,11 +1,18 @@
-
+<div class="col-12" style="text-align:center;margin-top:20px;">
+  <div class="innerSidebar">
+    <a href="/">
+      <div class="avatar">
+      </div>
+    </a>
+  </div>
+</div>
 
 <div style="margin:15px 0;text-align: center;">
-  <footer style=>
-    HaydenBrown | {{year}}<br>
-    <a class="footerLink" href="/">Home</a>
-  &nbsp;&#183;&nbsp;
-  <a class="footerLink" href="/contact/us">Contact</a>  
+  <footer>
+    Hayden Brown | {{year}}<br>
+    <!--<a class="footerLink" href="/">Home</a>
+     &nbsp;&#183;&nbsp;
+    <a class="footerLink" href="/contact">Contact</a>  -->
   </footer>
 </div>
   
