--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-menu-bar></app-menu-bar>
-<router-outlet></router-outlet>
+<div id="mainContent" class="contentWrapper">
+  <div class="row">
+    <div class="mainPageContent" style="padding:50px 0;">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
 <app-footer></app-footer>
