--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,3 +56,17 @@ h2 {
 .imagePadding {
   padding: 50px;
 }
+
+.mainPageContent {
+  padding-top:100px;
+  padding-bottom:100px;
+  max-width:700px;
+  margin:auto;
+  display:block;
+}
+
+#mainContent {
+  padding-left:15px;
+  padding-right:15px;
+  min-height:50vh;
+}
