--- a/src/+routes/home/home.component.html
+++ b/src/+routes/home/home.component.html
@@ -1,6 +1,6 @@
 <h1 id="homePageh1" class="textCenter">Hi, I'm Hayden.</h1>
 <p>
-  <img id="profileImage" class="respImage" src="/assets/profile-pic.jpeg" />
+  <img id="profileImage" class="respImage" src="./assets/profile-pic.jpeg" />
 </p>
 
 <div>
