--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="col-12" style="text-align:center;margin-top:20px;">
   <div class="innerSidebar">
-    <a href="/">
+    <a href="./">
       <div class="avatar">
       </div>
     </a>
