--- a/src/components/menu-bar/menu-bar.component.html
+++ b/src/components/menu-bar/menu-bar.component.html
@@ -1,7 +1,7 @@
 <div id="mainNav" class="navbar" > 
     <div class="navInner">
       <div>
-        <strong><a class="colorWhite" href="/">Hayden Brown</a></strong>
+        <strong><a class="colorWhite" href="./">Hayden Brown</a></strong>
       </div>
       <div class="linkList hideWhenSmall">
         <ng-container *ngFor="let navLink of navLinks">
