--- a/src/+routes/home/home.component.html
+++ b/src/+routes/home/home.component.html
@@ -4,7 +4,7 @@
 </p>
 
 <div>
-  <p>I'm a Champaign, IL based developer focused on web apps. You can see my recent work or follow me on <a href="{{gitHubUrl}}">GitHub</a> or <a href="{{linkedInUrl}}">LinkedIn</a>.</p>
+  <p>I'm a Woodbury, MN based developer focused on web apps. You can see my recent work or follow me on <a href="{{gitHubUrl}}">GitHub</a> or <a href="{{linkedInUrl}}">LinkedIn</a>.</p>
   <p>Most of my experience is with Angular applications, but increasingly I'm working with Java and Wolfram Language.</p>
-  <p>In my spare time, I enjoy running, rock climbing, and walking a Dachund/Jack-Russel mix.</p>
+  <p>In my spare time, I enjoy running, rock climbing, and walking my Dacshund/Jack-Russel mix.</p>
 </div>
