--- a/src/+routes/contact/contact.component.html
+++ b/src/+routes/contact/contact.component.html
@@ -1,7 +1,8 @@
-<div>
-  <h2>Contact</h2>
-  <p>Feel free to drop me a line if you would like to collaborate on a project.</p>          
+<div class="verticalPadding">
+  <div>
+    <h2>Contact</h2>
+    <p>Feel free to drop me a line if you would like to collaborate on a project.</p>          
+  </div>
+        
+  <a target="_blank" href="mailto:brown.hayden14@gmail.com"><button class="button button-blue callToActionButton">Send Message</button></a>
 </div>
-      
-<a target="_blank" href="mailto:brown.hayden14@gmail.com"><button class="button button-blue callToActionButton">Send Message</button></a>
-    
