--- a/src/+routes/home/home.component.html
+++ b/src/+routes/home/home.component.html
@@ -1,10 +1,12 @@
-<h1 id="homePageh1" class="textCenter">Hi, I'm Hayden.</h1>
-<p>
-  <img id="profileImage" class="respImage" src="./assets/profile-pic.jpeg" />
-</p>
+<div class="verticalPadding">
+  <h1 id="homePageh1" class="textCenter">Hi, I'm Hayden.</h1>
+  <p>
+    <img id="profileImage" class="respImage" src="./assets/profile-pic.jpeg" />
+  </p>
 
-<div>
-  <p>I'm a Woodbury, MN based developer focused on web apps. You can see my recent work or follow me on <a href="{{gitHubUrl}}">GitHub</a> or <a href="{{linkedInUrl}}">LinkedIn</a>.</p>
-  <p>Most of my experience is with Angular applications, but increasingly I'm working with Java and Wolfram Language.</p>
-  <p>In my spare time, I enjoy running, rock climbing, and walking my Dacshund/Jack-Russel mix.</p>
+  <div>
+    <p>I'm a Woodbury, MN based developer focused on web apps. You can see my recent work or follow me on <a href="{{gitHubUrl}}">GitHub</a> or <a href="{{linkedInUrl}}">LinkedIn</a>.</p>
+    <p>Most of my experience is with Angular applications, but increasingly I'm working with Java and Wolfram Language.</p>
+    <p>In my spare time, I enjoy running, rock climbing, and walking my Dachshund/Jack-Russel mix.</p>
+  </div>
 </div>
