--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,11 +58,13 @@ h2 {
 }
 
 .mainPageContent {
-  padding-top:100px;
-  padding-bottom:100px;
   max-width:700px;
   margin:auto;
   display:block;
+}
+
+.verticalPadding {
+  padding: 50px 0;
 }
 
 #mainContent {
